--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,12 @@ sudo: false
 language: node_js
 node_js:
 # We could enable testing on multiple versions, uncomment to add more.
-#- '6'
-#- '7'
+- '6'
 - '8'
+- '10'
+- 'node'
+before_script:
+  - npm run lint
 env:
 - CACHE_TIMEOUT_SECONDS=5
 cache:
